--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-bootstrap": "^2.9.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "latest",
+    "react-icons": "^4.11.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.7.7",
+    "vercel": "^32.3.1",
     "web-vitals": "^2.1.4"
   }
 }
