--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-hook/media-query": "^1.1.1",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
