--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@react-hook/media-query": "^1.1.1",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.2",
+    "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "next": "latest",
-    "nodemailer": "^6.7.5",
+    "nodemailer": "^6.9.6",
     "react": "latest",
     "react-bootstrap": "^2.9.0",
     "react-bootstrap-icons": "^1.10.3",
