--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-select": "^5.7.7",
     "usehooks-ts": "^2.9.1",
     "vercel": "^32.3.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   }
 }
