--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "google-spreadsheet": "^4.1.0",
     "next": "latest",
     "nodemailer": "^6.9.6",
     "react": "latest",
     "react-bootstrap": "^2.9.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "latest",
+    "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-mailchimp-subscribe": "^2.1.3",
