--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "google-auth-library": "^8.9.0",
     "google-spreadsheet": "^4.1.0",
     "next": "latest",
     "nodemailer": "^6.9.6",
@@ -31,6 +32,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.7.7",
     "usehooks-ts": "^2.9.1",
+    "uuid": "^9.0.1",
     "vercel": "^32.3.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
